implement query via http
